n/a - March 19, 2005
	* Updated RaQ2 patch (Jim Gifford)
	* Added net.agent for Hotplug of Network adapters in contrib
	  (Jim Gifford)

n/a - March 16, 2005
	* Reverted the change from loadproc to start_daemon,
	  Moved compatibility code into one single function.
	  (Nathan Coulson)
	* Readded the ONHOTPLUG option for ifup/ifdown (Nathan Coulson)
	* Fixed killproc's output

n/a - March 01, 2005
	* Added CHECK_LINK variable in ifconfig.*/*, so if the
	  interface does not exist, it will not fail.
	  (Nathan Coulson)

n/a - February 19, 2005
	* Added evaluate_retval to the end of loadproc and killproc.
	  lsb does not say that killproc should print [  OK  ],
	  but required for compatibility.  (Nathan Coulson)

n/a - February 9, 2005
	* Accidently mounted /dev with 775 instead of 755, fixed
	  (Reported by Alexander E. Patrakov)

n/a - February 9, 2005
	* Bugfix for /dev, now mounted with 755 permission

n/a - February 8, 2005
	* changed pidof, so it doesnt check the process id
	  of running bootscripts, and to process shell scripts
	  (Nathan Coulson)

n/a - February 6, 2005
	* Updated main functions file with lsb functions file
	  Should now be LSB compliant (Nathan Coulson)

n/a - January 10, 2005
	* Moved ONBOOT check back to network (Nathan Coulson)
	* Removed ONHOTPLUG check (Nathan Coulson)

n/a - January 6, 2005
	* fixed mountkernfs output (Nathan Coulson)
	* reverted mountfs fakemounting (Nathan Coulson)

n/a - January 5, 2005
	* Attempted to simplify network bootup files (Nathan Coulson)
	* Modified mountkernfs to use mountpoint (Nathan Coulson)
	* Assuming sysfs is always mounted (Nathan Coulson)
	* Moved fakemount to below mounting (Nathan Coulson)
	* Removed -t noramfs from umount, as we now use tmpfs (Nathan Coulson)
	* moved sysctl from mountkernfs to sysctl (Nathan Coulson)
	* Added -q to sysctl (Nathan Coulson)

n/a - January 2, 2005
	* Fixed statusproc output. (DJ Lucas)

3.1.0 - December 31, 2004
	* fixed textoutput
	* Tagged as 3.1.0
